# curator

./: .buildinfo  CHANGELOG.rst  README.rst  curator-app.aider  get-arxiv.py  index.html  objects.inv  pyproject.toml  searchindex.js  test.py
.clerk/: src.md
.clerk/doc/: index.html  main.md
.github/workflows/: action.yml
_sources/: index.rst.txt
_sources/modules/: index.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
demos/: index.html
demos/demo/: index.html
docsrc/: conf.py  index.rst
docsrc/log/24.125-164141/: index.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
log/drafts/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
references/: communicating_natural_programs_to_humans_and_machi.rst
references/analog-bits-generating-discrete-data-using-diffusion-models-with-self-conditioning/: index.rst
references/on-the-measure-of-intelligence/: index.rst
refs/: index.html
search/: index.html
src/photon_platform/curator/: __init__.py  _app.py  app.css  app.py  arxivit.py  arxivit.py_  branch.py  create_release_branch.yaml  create_tag.yaml  curator.py  gather.py  get_youtube.py  git_reset.py  merge_release_branch.yaml  modal.py  prompt.md  prompt.sh  prompt_instruction.md  prompt_intro.md  repo_rst.py  tree.txt
todos/: index.html
usage/: index.html
