[project]
name = "photon-platform-curator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gitpython",
    "PyGithub",
    "toml",
    "textual",
    "rich",
    "jinja2",
    "arxiv",
]

[project.scripts]
curator = "photon_platform.curator.app:run"
gather = "photon_platform.curator.gather:main"
grax = "photon_platform.curator.arxivit:main"
ggh = "photon_platform.curator.repo_rst:main"
gyt = "photon_platform.curator.get_youtube:main"
git_reset = "photon_platform.curator.git_reset:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon_platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon_platform.curator.__version__"}

[project.urls]
"Website" = "https://photon-platform.github.io/curator"
"Repository" = "https://github.com/photon-platform/curator"
"Issues" = "https://github.com/photon-platform/curator/issues"
